--- a/Lanchonete/Views/Shared/Carrossel.cshtml
+++ b/Lanchonete/Views/Shared/Carrossel.cshtml
@@ -23,3 +23,74 @@
         <span class="visually-hidden">Next</span>
     </button>
 </div>
+
+<div class="col-12">
+    <br />
+    <br />
+
+
+
+    <div class="container col-3 d-inline-flex p-0">
+        <div class="card">
+            <h1 class="m-2">Teste menu</h1>
+
+
+
+            <div class="dropdown m-2">
+                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Dropdown link
+                </a>
+
+
+
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+            </div>
+            <div class="dropdown m-2">
+                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Dropdown link
+                </a>
+
+
+
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+            </div>
+
+            <div class="dropdown m-2">
+                <a class="btn btn-secondary dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    Dropdown link
+                </a>
+
+
+
+                <ul class="dropdown-menu">
+                    <li><a class="dropdown-item" href="#">Action</a></li>
+                    <li><a class="dropdown-item" href="#">Another action</a></li>
+                    <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+            </div>
+        </div>
+    </div>
+
+
+
+    <div class="container col-8 d-inline-flex">
+
+
+
+        <div class="card">
+            <h1 class="m-2">tela produtos para teste</h1>
+
+
+
+        </div>
+    </div>
+</div>
+
